--- a/tutor/templates/tutor/loginAll.html
+++ b/tutor/templates/tutor/loginAll.html
@@ -77,9 +77,9 @@
 										</div>
 										<input type="password" class="form-control" id="password1" name='password1' placeholder="Password" required>
 									</div>
-									<div class="input-group form-group form-inline col-sm-7">
+									<div class="col-sm-7">
+										<input type="checkbox" id="remember" name='remember' style="padding-left:-19 px;">
 										Remember me
-										<input type="checkbox" class="form-control" id="remember" name='remember'>
 									</div>
 									<br>
 									<div class="form-group form-inline col-sm-7">
@@ -121,9 +121,9 @@
 										</div>
 										<input type="password" class="form-control" id="password1" name='password1' placeholder="Password" required>
 									</div>
-									<div class="input-group form-group form-inline col-sm-7">
+								<div class="col-sm-7">
+										<input type="checkbox" id="remember" name='remember' style="padding-left:-19 px;">
 										Remember me
-										<input type="checkbox" class="form-control" id="remember" name='remember'>
 									</div>
 									<br>
 									<div class="form-group form-inline col-sm-7">
@@ -163,9 +163,9 @@
 										</div>
 										<input type="password" class="form-control" id="password1" name='password1' placeholder="Password" required>
 									</div>
-									<div class="input-group form-group form-inline col-sm-7">
+									<div class="col-sm-7">
+										<input type="checkbox" id="remember" name='remember' style="padding-left:-19 px;">
 										Remember me
-										<input type="checkbox" class="form-control" id="remember" name='remember'>
 									</div>
 									<br>
 									<div class="form-group form-inline col-sm-7">
